@@ -1,3 +1,10 @@
+2012-05-29  Sebastien Binet  <binet@cern.ch>
+
+	* tagging PyUtils-00-12-07
+	* fix bogus WorkArea/cmt/requirements file (runtime project was
+	  labeled as AtlasAtlasFoo instead of AtlasFoo)
+	* M python/WorkAreaLib.py
+
 2012-04-11  Sebastien Binet  <binet@cern.ch>
 
 	* tagging PyUtils-00-12-06
